--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "homepage": "https://github.com/Kruhlmann/classic-auctions#readme",
     "license": "GPL-3.0-or-later",
     "scripts": {
-        "start": "npm run build && node dist/src/main.js",
+        "start": "yarn run build && node ./dist/src/server.js",
+        "dev": "tsc-watch --onSuccess \"node ./dist/server.js\"",
         "build": "tsc",
         "watch": "tsc -w",
         "test": "mocha -r ts-node/register tests/*.spec.ts",
@@ -25,10 +26,15 @@
     "dependencies": {
         "@istanbuljs/nyc-config-typescript": "^1.0.1",
         "@types/chai": "^4.2.9",
+        "@types/compression": "^1.7.0",
+        "@types/cors": "^2.8.6",
+        "@types/express": "^4.17.2",
         "@types/mocha": "^7.0.1",
         "@types/node": "^13.7.4",
         "@types/sequelize": "^4.28.8",
         "chai": "^4.2.0",
+        "compression": "^1.7.4",
+        "cors": "^2.8.5",
         "express": "^4.17.1",
         "mocha": "^7.0.1",
         "node-pg-migrate": "^4.2.2",
@@ -36,6 +42,7 @@
         "pg": "^7.18.2",
         "sequelize": "^5.21.5",
         "ts-node": "^8.6.2",
+        "tsc-watch": "^4.1.0",
         "typescript": "^3.8.2"
     }
 }
