--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,10 @@
         "outDir": "dist",
         "moduleResolution": "node",
         "downlevelIteration": true,
-        "target": "es6"
+        "target": "es6",
+        "esModuleInterop": true,
+        "noUnusedLocals": true,
+        "typeRoots": ["./node_modules/@types", "./src/typings/"]
     },
     "include": ["src/**/*.ts"],
     "exclude": ["node_modules", "**/*.spec.ts"]
