--- a/package.json
+++ b/package.json
@@ -5,17 +5,6 @@
     "author": "Andreas Kruhlmann <kruhlmann@protonmail.com>",
     "homepage": "https://github.com/Kruhlmann/classic-auctions#readme",
     "license": "GPL-3.0-or-later",
-    "scripts": {
-        "start": "yarn run build && node ./dist/src/index.js",
-        "dev": "tsc-watch --onSuccess \"node ./dist/src/index.js\"",
-        "build": "tsc",
-        "watch": "tsc -w",
-        "test": "mocha -r ts-node/register tests/*.spec.ts",
-        "coverage": "nyc npm run test",
-        "migrate": "node-pg-migrate",
-        "upgrade": "DATABASE_URL=postgres://$CA_DB_USR:$CA_DB_PWD@localhost:5432/$CA_DB_NAM yarn run migrate up",
-        "downgrade": "DATABASE_URL=postgres://$CA_DB_USR:$CA_DB_PWD@localhost:5432/$CA_DB_NAM yarn run migrate down"
-    },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/Kruhlmann/classic-auctions.git"
@@ -23,22 +12,51 @@
     "bugs": {
         "url": "https://github.com/Kruhlmann/classic-auctions/issues"
     },
+    "scripts": {
+        "start": "yarn run build && node ./dist/src/index.js",
+        "dev": "tsc-watch --onSuccess \"node ./dist/src/index.js\"",
+        "build": "tsc",
+        "watch": "tsc -w",
+        "test": "jest --coverage --verbose",
+        "migrate": "node-pg-migrate",
+        "upgrade": "DATABASE_URL=postgres://$CA_DB_USR:$CA_DB_PWD@localhost:5432/$CA_DB_NAM yarn run migrate up",
+        "downgrade": "DATABASE_URL=postgres://$CA_DB_USR:$CA_DB_PWD@localhost:5432/$CA_DB_NAM yarn run migrate down"
+    },
+    "jest": {
+        "verbose": true,
+        "transform": {
+            "^.+\\.tsx?$": "ts-jest"
+        },
+        "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+        "moduleFileExtensions": [
+            "ts",
+            "tsx",
+            "js",
+            "jsx",
+            "json",
+            "node"
+        ]
+    },
     "dependencies": {
         "@istanbuljs/nyc-config-typescript": "^1.0.1",
         "@types/compression": "^1.7.0",
         "@types/cors": "^2.8.6",
         "@types/express": "^4.17.2",
+        "@types/jest": "^25.1.3",
         "@types/node": "^13.7.4",
         "@types/sequelize": "^4.28.8",
         "@types/swagger-ui-express": "^4.1.1",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
         "express": "^4.17.1",
+        "jest": "^25.1.0",
         "node-pg-migrate": "^4.2.2",
         "nyc": "^15.0.0",
         "pg": "^7.18.2",
         "sequelize": "^5.21.5",
         "swagger-ui-express": "^4.1.3",
+        "tmux": "^1.0.0",
+        "ts-jest": "^25.2.1",
         "ts-node": "^8.6.2",
         "tsc-watch": "^4.1.0",
         "typescript": "^3.8.2"
